added angularjs to project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-<header></header>
-<main></main>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+<title>Chirin Safi</title>
+</head>
+<body ng-app="myPortfolio">
+<header ng-controller = "HomeController">
+<h1>{{title}}</h1>
+</header>
+<main>
+<h3>Kompetenser:</h3>
+<ol>
+<li>C#</li>
+<li>JavaScript</li>
+<li>Visual Studio</li>
+<li>HTML5</li>
+<li>CSS</li>
+<li>SQL</li>
+<li>Microsoft SQL-server</li>
+<li>Razor</li>
+</ol>
+</main>
 <footer></footer>
 <body>
 
